# outof

./: .env.example  .gitignore  .mcp.json  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  readme.md  rustfmt.toml  tsconfig.json
.opencode/command/: frontend-design.md  opensrc.md  skill-creator.md
.opencode/skill/frontend-design/: SKILL.md
.opencode/skill/frontend-design/references/animation/: motion-advanced.md  motion-core.md
.opencode/skill/react-best-practices/: AGENTS.md
.opencode/skill/react-best-practices/rules/: advanced-event-handler-refs.md  advanced-use-latest.md  async-dependencies.md  bundle-conditional.md  bundle-defer-third-party.md  bundle-dynamic-imports.md  js-batch-dom-css.md  js-index-maps.md
.opencode/skill/skill-creator/: SKILL.md
.opencode/skill/skill-creator/references/: agent-skills-best-practices.md  agent-skills-intro-blog.md  agent-skills-spec.md
.opencode/state/outof/: prd.json  prd.md  progress.txt
app/: globals.css  layout.tsx  page.tsx
app/[chatId]/list/[name]/: actions.ts  page.tsx  shopping-list.tsx
app/api/telegram/webhook/: route.ts
lib/: layers.ts
lib/core/errors/: index.ts
lib/core/item/: queries.ts
lib/core/list/: name-generator.ts  queries.ts
lib/services/db/: live-layer.ts  schema.ts
lib/services/telegram/: errors.ts  live-layer.ts
src/: main.rs
src/db/: mod.rs
src/frontend/: mod.rs
src/list/: mod.rs
src/server/: mod.rs
src/telegram/: mod.rs
(+13 files in other folders)
