[package]
name = "outof"
version = "0.1.0"
edition = "2021"
authors = [
  "GustavEkberg"
]

[dependencies]
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.85"

chrono = "0.4"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
]