[package]
name = "outof"
version = "0.1.0"
edition = "2021"
authors = [
  "GustavEkberg"
]

[dependencies]
serde = { version = "1.0.85", features = ["derive"] }
serde_json = "1.0.85"
http = "0.2"
chrono = "0.4"
uuid = { version = "1.1.2", features = ["v4"] }
rand = { version = "0.8.5", features = ["small_rng"] }


teloxide = { version = "0.10", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["full"] }
warp = "0.3"